--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ markdown: kramdown
 theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
+highlighter: none
+kramdown:
+  syntax_highlighter_opts:
+    disable: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
